--- a/client/src/index.html
+++ b/client/src/index.html
@@ -52,8 +52,106 @@
           </a>
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="#" class="nav-link">Upload</a>
+              <!-- <a href="#" class="nav-link">Upload</a> -->
+              <a
+                type="button"
+                class="nav-link"
+                data-bs-toggle="modal"
+                data-bs-target="#upload-modal"
+              >
+                Upload
+              </a>
+                <!----Upload Modal that pops up starts-->
+                <div class="modal fade" id="upload-modal">
+                  <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                      <div class="d-flex justify-content-between m-2">
+                        <h1>Upload Your Film Information</h1>
+                        <button
+                          class="btn-close"
+                          data-bs-dismiss="modal"
+                        ></button>
+                      </div>
+                      <div class="modal-body">
+                        <form id="edit-form">
+                          <div class="form-floating mb-3">
+                            <input
+                              type="text"
+                              id="edit-title"
+                              class="form-control"
+                              placeholder="Place title here"
+                            />
+                            <label for="edit-title" class="form-label">
+                              Title
+                            </label>
+                          </div>
+                          <div class="form-floating mb-3">
+                            <input
+                              type="text"
+                              id="edit-credits"
+                              class="form-control"
+                              placeholder="Place credits here"
+                            />
+                            <label for="edit-credits" class="form-label">
+                              Credits/Creators</label
+                            >
+                          </div>
+                          <div class="form-floating mb-3">
+                            <input
+                              type="text"
+                              id="edit-vidURL"
+                              class="form-control"
+                              placeholder="Place URL here"
+                            />
+                            <label for="edit-vidURL" class="form-label">
+                              URL for your Video</label
+                            >
+                          </div>
+                          <div class="form-floating mb-3">
+                            <textarea
+                              class="form-control"
+                              placeholder="Leave a desc"
+                              id="floatingTextarea2"
+                              style="height: 100px"
+                            ></textarea>
+                            <label for="floatingTextarea2"
+                              >Description</label
+                            >
+                          </div>
+                          <div class="form-floating mb-3">
+                            <input
+                              type="text"
+                              id="edit-thumbURL"
+                              class="form-control"
+                              placeholder="Place URL here"
+                            />
+                            <label for="edit-thumbURL" class="form-label">
+                              URL for your Thumbnail</label
+                            >
+                          </div>
+                          <div class="d-flex justify-content-between">
+                            <button
+                              class="btn btn-success"
+                              data-bs-dismiss="modal"
+                            >
+                              Submit
+                            </button>
+                            <button
+                              class="btn btn-danger"
+                              data-bs-dismiss="modal"
+                            >
+                              Delete
+                            </button>
+                          </div>
+                        </form>
+                      </div>
+                      <!-- <div class="modal-footer"></div> -->
+                    </div>
+                  </div>
+                </div>
             </li>
+            
+                  <!-- end upload modal-->
             <li class="nav-item">
               <a href="#" class="nav-link">Sign in/Sign up</a>
             </li>
@@ -174,8 +272,9 @@
                   </div>
                   <!----Edit Modal that pops up ends-->
 
-                  <svg
-                    class="bd-placeholder-img card-img-top"
+                  <img
+                    src="https://encrypted-tbn3.gstatic.com/licensed-image?q=tbn:ANd9GcQ3WT3Bn1h_gkaOTHDP3C-vjoiMrGtGoSi4P-P8YXbpY_K6sH-Iag17SmI9RyvpBb-j03VfaJmHZSSfAwc"
+                    class="bd-placeholder-img"
                     width="100%"
                     height="225"
                     xmlns="http://www.w3.org/2000/svg"
@@ -185,11 +284,11 @@
                     focusable="false"
                   >
                     <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#55595c" />
+                    <rect width="100%" height="100%" fill="#55595c" /> 
                     <text x="50%" y="50%" fill="#eceeef" dy=".3em">
                       Thumbnail
                     </text>
-                  </svg>
+                  </img>
 
                   <div class="card-body">
                     <p class="card-text">
@@ -317,8 +416,9 @@
                   </div>
                   <!----Edit Modal that pops up ends-->
 
-                  <svg
-                    class="bd-placeholder-img card-img-top"
+                  <img
+                    src="https://encrypted-tbn3.gstatic.com/licensed-image?q=tbn:ANd9GcQ3WT3Bn1h_gkaOTHDP3C-vjoiMrGtGoSi4P-P8YXbpY_K6sH-Iag17SmI9RyvpBb-j03VfaJmHZSSfAwc"
+                    class="bd-placeholder-img"
                     width="100%"
                     height="225"
                     xmlns="http://www.w3.org/2000/svg"
@@ -459,8 +559,9 @@
                   </div>
                   <!----Edit Modal that pops up ends-->
 
-                  <svg
-                    class="bd-placeholder-img card-img-top"
+                  <img
+                    src="https://encrypted-tbn3.gstatic.com/licensed-image?q=tbn:ANd9GcQ3WT3Bn1h_gkaOTHDP3C-vjoiMrGtGoSi4P-P8YXbpY_K6sH-Iag17SmI9RyvpBb-j03VfaJmHZSSfAwc"
+                    class="bd-placeholder-img"
                     width="100%"
                     height="225"
                     xmlns="http://www.w3.org/2000/svg"
@@ -502,7 +603,7 @@
           </div>
         </div>
       </section>
-      <!-- WHere the random generated videos come from -->
+      <!-- WHere the chronological videos begin -->
       <div class="album py-5 bg-dark">
         <div class="container">
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
